src/test/deca/syntax/invalid/sansobjet/DeclaIntToBig.deca
// DeclaIntF.deca:5:8: no viable alternative at input '1'
// Description: teste declaration incorrect nombre
// Resultat: erreur ligne 5:  nombre trop grand
{
    float i = 10.0E123;
}
